--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h1 class="text-center mt-3 font-weight-bold"><span class="text-info">V</span>-EVENT</h1>
 
   <!-- 説明 -->
-  <div class="mb-3 mx-3 p-3 row">
+  <div class="mb-3 mx-3 p-3 row no-gutters">
     <!-- V-EVENTについて -->
     <div class="mt-3 col-md-5 mx-auto p-3 bg-light">
       <div class="w-100 mt-3 px-3">
@@ -78,10 +78,8 @@
   </div>
 
   <!-- 3Dビューア -->
-  <div class="w-100 row">
-    <div class="col-md-2"></div>
-
-    <div class="col-md-8 unity-content">
+  <div class="w-100 row no-gutters">
+    <div class="col-md-8 ml-auto unity-content">
       <div id="unity"></div>
       <div id="uniry-canvas">
         <!-- Progress Bar -->
@@ -93,7 +91,53 @@
       </div>
     </div>
 
-    <div class="col-md-2"></div>
+    <div class="col-md-3 mx-auto">
+      <h2 class="font-weight-bold text-secondary">商品詳細</h2>
+      <div class="w-100 p-3 bg-light">
+        <img class="bg-light" style="width: 100%; height: 250px;"></img>
+        <h5 class="mt-4 font-weight-bold">ソファ1</h5>
+        <div class="mt-4">
+          「カウチ」は、伝統的な意味では、他のソファと比べて背もたれの高さは半分で、その代わり肘掛のうち一方が首や頭をもたれさせられるように高くなっているものだった[1][2]。
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 商品一覧 -->
+  <h2 class="mt-5 mx-5 px-3 font-weight-bold text-secondary">商品一覧</h2>
+  <div class="mb-3 mx-3 px-3 row no-gutters">
+    <!-- 商品1 -->
+    <div class="col-md-4 mx-auto p-3">
+      <div class="w-100 mt-3 px-3">
+        <img class="bg-light" style="width: 100%; height: 250px;"></img>
+        <h5 class="mt-4 font-weight-bold">ソファ1</h5>
+        <div class="mt-4">
+          「カウチ」は、伝統的な意味では、他のソファと比べて背もたれの高さは半分で、その代わり肘掛のうち一方が首や頭をもたれさせられるように高くなっているものだった[1][2]。
+        </div>
+      </div>
+    </div>
+
+    <!-- 商品2 -->
+    <div class="col-md-4 mx-auto p-3">
+      <div class="w-100 mt-3 px-3">
+        <img class="bg-light" style="width: 100%; height: 250px;"></img>
+        <h5 class="mt-4 font-weight-bold">ソファ2</h5>
+        <div class="mt-4">
+          「カウチ」は、伝統的な意味では、他のソファと比べて背もたれの高さは半分で、その代わり肘掛のうち一方が首や頭をもたれさせられるように高くなっているものだった[1][2]。
+        </div>
+      </div>
+    </div>
+
+    <!-- 商品3 -->
+    <div class="col-md-4 mx-auto p-3">
+      <div class="w-100 mt-3 px-3">
+        <img class="bg-light" style="width: 100%; height: 250px;"></img>
+        <h5 class="mt-4 font-weight-bold">ソファ3</h5>
+        <div class="mt-4">
+          「カウチ」は、伝統的な意味では、他のソファと比べて背もたれの高さは半分で、その代わり肘掛のうち一方が首や頭をもたれさせられるように高くなっているものだった[1][2]。
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- フッター -->
